# bulk_tokenizer

./: .gitmodules  README.md  audit_data.py  loading_example.ipynb  pyproject.toml  run_tokenizer.py  stream_reconstructor.py  tokenize_batch.py  validate_output.py
configs/: config.yaml  testcfg.yaml
example_scripts/: audit.sh  run_bpe_4k_cont_test.sh  run_bpe_4k_test.sh  run_concept_cont_factored_test.sh  run_everything.sh
fastbpe/: funcs.cpp  funcs.py
modules/: text_tokenizer.py  tokenizer_v2.py
scripts/: run_bpe_cont_factored_16k.sh  run_bpe_cont_factored_4k.sh  run_bpe_cont_factored_8k.sh  run_bpe_discrete_factored_16k.sh  run_bpe_discrete_factored_4k.sh  run_bpe_discrete_factored_8k.sh  run_concept_cont_factored.sh  run_concept_cont_fused.sh  run_concept_discrete_factored.sh  run_concept_discrete_fused.sh
